--- a/trip_advisor_crawler/scrapy.cfg
+++ b/trip_advisor_crawler/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = HotelReviewCrawler.settings
+default = trip_advisor.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = HotelReviewCrawler
+project = TripAdvisorCrawler
