--- a/hotel_information/scrapy.cfg
+++ b/hotel_information/scrapy.cfg
@@ -4,8 +4,9 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = hotelscom.settings
+default = crawlers.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = hotelscom
+project = TripAdvisorCrawler
+
